--- a/fontend/public/index.html
+++ b/fontend/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Hello</title>
+    <!-- <link rel="shortcut icon" type="image/ico" href="/src/assets/img/favicon.ico/"> -->
+    <title>AMIS BÁN HÀNG</title>
   </head>
   <body>
     <noscript>
